# essence

./: .gitignore  CMakeLists.txt  version.h.in
src/: CMakeLists.txt  main.cpp
